# Molecule3D

./: .gitattributes  .gitignore  .readthedocs.yaml  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  Notebook.ipynb  README.md  descriptors.csv  example.py  mkdocs.yml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  docs.yml  draft-paper.yml  publish.yml
docs/: api-reference.md  benchmarks.md  contributing.md  index.md  installation.md  limitations.md  quickstart.md  requirements.txt  roadmap.md  validation.md
docs/blog/: introducing-molscope.md
docs/examples/: analyze-contacts.md  binding-site.md  build-molecular-graph.md  coarse-grain-protein.md  compare-nmr-models.md  export-pyg.md  geometry-tour.md  index.md  pdb-to-graph-cg.md  pdb-to-pyg-ml.md  protein-analysis-from-scratch.md  residue-contact-graphs.md
docs/tutorials/: index.md  pdb-to-coarse-grained-beads.md  pdb-to-descriptors.md  pdb-to-graph-gnn.md
docs/user-guide/: chemical-perception.md  coarse-graining.md  contact-maps.md  coordinate-formats.md  descriptors.md  ensembles.md  geometry.md  library-selection.md  mcp-server.md  molecular-graphs.md  plotting.md  protein-analysis.md  reading-files.md  selections.md
examples/: binding_site.py  coarse_graining.py  geometry.py  graph_to_gnn.py  legacy_utils.py  pdb_to_pyg_ml.py  protein_analysis.py  residue_contact_graph.py  tour.py
graphs/: 1aml.json  1fqy.json  3ptb.json
molecule3d/: __init__.py  cli.py  coarsegrain.py  contactmap.py  elements.py  ensemble.py  graph.py  io.py  molecule.py  plotting.py
molscope/: __init__.py  chem.py  cif.py  cli.py  coarsegrain.py  contactmap.py  contacts.py  descriptors.py  distance.py  dssp.py  ensemble.py  graph.py  io.py  library.py  mcp_server.py  molecule.py  plotting.py  prepare.py
notebooks/: molscope_tour.ipynb  pdb_to_gnn.ipynb  protein_analysis_from_scratch.ipynb
paper/: paper.bib  paper.md
scripts/: benchmark_core.py  build_gnn_notebook.py  build_protein_analysis_notebook.py  build_user_guide_pdf.py  render_coarsegrain_images.py  render_contact_analysis_images.py  render_geometry_images.py
tests/: test_bond_guessing.py  test_cg_mapping.py  test_cg_openmm_xml.py  test_chem.py  test_cif_validation.py  test_cli.py  test_cli_batch.py  test_clustering.py  test_coarsegrain.py  test_contactmap.py  test_contacts.py  test_descriptors.py  test_dssp.py  test_extras.py  test_features.py  test_graph.py  test_graph_extras.py  test_io.py  test_library.py  test_mcp_server.py  test_molecule.py  test_prepare.py  test_protein_workflows.py  test_smiles.py  test_stream.py
tests/fixtures/: bad_coord.xyz  bad_counts.sdf  insertion_codes.cif  missing_coord_col.cif  no_atom_site.cif  truncated.sdf  truncated.xyz  v3000.sdf  water.sdf
tests/validation/: test_binding_sites_ref.py  test_bonds_ref.py  test_chem_ref.py  test_dssp_ref.py  test_geometry_ref.py  test_invariants.py  test_template_bonds_ref.py
