[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "molecule3d"
version = "0.6.0"
description = "Lightweight molecular structure analysis, visualisation, graph export, and coarse-graining in Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Roshan Shrestha", email = "roshanpra@gmail.com" }]
keywords = [
    "chemistry",
    "molecular-structure",
    "pdb",
    "xyz",
    "mmcif",
    "coarse-graining",
    "molecular-graphs",
    "machine-learning",
    "visualization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["numpy>=1.21", "matplotlib>=3.5"]

[project.optional-dependencies]
test = ["pytest>=7"]
fast = ["scipy>=1.7"]          # enables the KD-tree bond search for large structures
viz = ["py3Dmol>=2.0"]         # interactive notebook viewer (Molecule.view)
graph = ["networkx>=2.6"]      # NetworkX exporter only; PyG/DGL installed separately

[project.urls]
Homepage = "https://github.com/roshan2004/Molecule3D"
Repository = "https://github.com/roshan2004/Molecule3D"

[project.scripts]
molecule3d = "molecule3d.cli:main"

# Dev tooling for `uv sync` (installed by default; PEP 735 dependency group).
# scipy is included so the KD-tree bond path is exercised by the test suite.
[dependency-groups]
dev = ["pytest>=7", "scipy>=1.7", "ruff>=0.6", "py3Dmol>=2.0", "networkx>=2.6"]
docs = ["mkdocs-material>=9.5"]

[tool.setuptools]
packages = ["molecule3d"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.ruff.lint.per-file-ignores]
# Notebook cells legitimately re-import and import mid-file across cells.
"*.ipynb" = ["E402", "F811", "I001"]
