[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "molscope"
dynamic = ["version"]
description = "A lightweight bridge from molecular structures to descriptors, contact maps, graph-ML inputs, and educational coarse-grained representations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Roshan Shrestha", email = "roshanpra@gmail.com" }]
keywords = [
    "chemistry",
    "molecular-structure",
    "pdb",
    "xyz",
    "mmcif",
    "coarse-graining",
    "molecular-graphs",
    "machine-learning",
    "visualization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["numpy>=1.21", "matplotlib>=3.5"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]
fast = ["scipy>=1.7"]          # enables the KD-tree bond search for large structures
viz = ["py3Dmol>=2.0"]         # interactive notebook viewer (Molecule.view)
graph = ["networkx>=2.6"]      # NetworkX exporter
chem = ["rdkit>=2023.9"]       # optional chemical perception backend
cif = ["gemmi>=0.7"]           # robust mmCIF parsing and validation helpers
xlsx = ["openpyxl>=3.1"]       # read/write .xlsx molecule tables for `molscope select`
gpu = ["torch>=2.0"]           # optional dense distance/contact-map backend
# MCP server exposing MolScope to AI assistants. The reference `mcp` SDK needs
# Python >= 3.10, so the marker keeps the 3.9 dependency resolution solvable;
# the server raises a clear install hint if invoked without `mcp` present.
# pydantic >= 2.11 is required: FastMCP builds a wrapped output model for every
# tool via pydantic's `create_model`, and pydantic 2.10 and earlier raise
# `TypeError: If there is a __root__ field in model` there. `mcp`'s own pydantic
# floor is looser, so without this pin `pip install molscope[mcp]` can resolve to
# pydantic 2.10 and the server fails to start.
mcp = ["mcp>=1.2; python_version >= '3.10'", "pydantic>=2.11; python_version >= '3.10'"]
# Reference tools for the Tier-2 validation suite (tests/validation). The DSSP
# cross-check additionally needs a system `mkdssp`/`dssp` binary.
validation = ["mdanalysis>=2.7", "rdkit>=2023.9"]
pyg = ["torch>=2.0", "torch-geometric>=2.3"]
dgl = ["torch>=2.0", "dgl>=1.1"]
gnn = [
    "networkx>=2.6",
    "torch>=2.0",
    "torch-geometric>=2.3",
    "dgl>=1.1",
]

[project.urls]
Homepage = "https://github.com/roshan2004/molscope"
Repository = "https://github.com/roshan2004/molscope"
Documentation = "https://molscope.readthedocs.io/"
Issues = "https://github.com/roshan2004/molscope/issues"

[project.scripts]
molscope = "molscope.cli:main"
molscope-mcp = "molscope.mcp_server:main"

# Dev tooling for `uv sync` (installed by default; PEP 735 dependency group).
# scipy is included so the KD-tree bond path is exercised by the test suite.
[dependency-groups]
dev = ["pytest>=7", "pytest-cov>=4", "scipy>=1.7", "ruff>=0.6", "py3Dmol>=2.0", "networkx>=2.6", "openpyxl>=3.1", "mcp>=1.2; python_version >= '3.10'", "pydantic>=2.11; python_version >= '3.10'"]
docs = ["mkdocs-material>=9.5"]
# Tooling to open and re-execute notebooks/molscope_tour.ipynb.
notebook = ["jupyterlab>=4", "ipykernel>=6", "nbconvert>=7"]

[tool.setuptools]
packages = ["molscope"]

# Single source of truth for the version: molscope/__init__.py (__version__).
# setuptools parses it statically at build time, so there is nothing to keep in
# sync with [project] above.
[tool.setuptools.dynamic]
version = { attr = "molscope.__version__" }

[tool.pytest.ini_options]
markers = [
    "validation: cross-checks against reference scientific tools (skipped unless installed)",
]

[tool.coverage.run]
source = ["molscope"]
branch = true

[tool.coverage.report]
# Skip files that exist only to be run, not measured for line coverage.
omit = ["molscope/__main__.py"]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.ruff.lint.per-file-ignores]
# Notebook cells legitimately re-import and import mid-file across cells.
"*.ipynb" = ["E402", "F811", "I001"]
# N, CA, C, O are the standard backbone atom names; "O" reads clearly here.
"molscope/dssp.py" = ["E741"]
